Fix bug with overflow

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   background-image: url('images/background/snow1.png'), url('images/background/snow2.png');
   animation: snow 150s linear infinite;
   animation-direction: reverse;
-  position: absolute;
+  position: fixed;
   opacity: 0.9;
   top: 0;
   left: 0;
@@ -17,7 +17,7 @@
   background-image: url('images/background/snow3.png');
   animation: snow 200s linear infinite;
   animation-direction: normal;
-  position: absolute;
+  position: fixed;
   opacity: 0.3;
   top: 0;
   left: 0;
@@ -34,4 +34,13 @@
 @keyframes snow2 {
  0% {background-position: 0 0;}
  100% {background-position: 100% 100%;}
+}
+
+.fill {
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  overflow: auto;
+  position: relative;
 }
