--- a/src/modules/firstpage/firstpage.css
+++ b/src/modules/firstpage/firstpage.css
@@ -66,14 +66,6 @@
 }
 
 
-.fill {
-  height: 100%;
-  width: 100%;
-  left: 0;
-  top: 0;
-  overflow: hidden;
-  position: fixed;
-}
 
 /* display: flex;
 justify-content: center; */
